# detours-gmock

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakeLocalPresets.json.template  CMakePresets.json  NOTICE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  codeql-analysis.yml
cmake/: detours-gmock-config.cmake.in
include/: detours_gmock.h
test/: .clang-tidy  detours_gmock.test.cpp  detours_gmock_Test.cpp  pch.h
